--- a/08AnimatedLogin/app/src/main/res/layout/activity_main.xml
+++ b/08AnimatedLogin/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingHorizontal="25dp"
-        android:text="Hello World!"
+        android:text="Login"
+        android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.704" />
+        app:layout_constraintVertical_bias="0.704"
+        android:background="@drawable/button_shape"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
